<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.andrei15193.bitbucketbrowser.RepositoryActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_label"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repository_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/paragraph_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_label"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/repository_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/paragraph_size" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:textSize="@dimen/paragraph_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/repository_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/paragraph_size" />

</LinearLayout>